--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,8 @@
   NODE_VERSION = "16"
 
 [build]
-  publish = "dist"
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+  publish = "docs/.vuepress/dist"
+  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build && npx pnpm run docs:build"
 
 [[redirects]]
   from = "/*"
