--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Zhengqbbb <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb)",
   "scripts": {
-    "build": "pnpm --filter=\"vuepress*\" --stream build && pnpm copy",
+    "build": "tsc -b ./tsconfig.build.json && pnpm copy",
     "copy": "pnpm --filter=\"vuepress*\" --parallel --stream copy",
     "dev": "concurrently \"tsc -b ./tsconfig.build.json --watch\" \"pnpm run copy\"",
     "lint": "eslint .",
@@ -20,21 +20,21 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
-    "@types/node": "^18.0.5",
+    "@antfu/eslint-config": "^0.27.0",
+    "@types/node": "^18.7.18",
     "bumpp": "7.2.0",
     "cpx2": "^4.2.0",
-    "concurrently": "^7.2.2",
+    "concurrently": "^7.4.0",
     "conventional-changelog-cli": "^2.2.2",
-    "cz-git": "^1.3.9",
+    "cz-git": "^1.3.11",
     "esno": "^0.16.3",
-    "eslint": "^8.19.0",
-    "fast-glob": "^3.2.11",
+    "eslint": "^8.23.1",
+    "fast-glob": "^3.2.12",
     "js-yaml": "^4.1.0",
     "ora": "^6.1.2",
-    "pathe": "^0.3.2",
+    "pathe": "^0.3.8",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   },
   "engines": {
     "pnpm": ">=7"
