--- a/packages/plugin-china-search-console/package.json
+++ b/packages/plugin-china-search-console/package.json
@@ -17,8 +17,14 @@
     "type": "git",
     "url": "https://github.com/Zhengqbbb/vuepress-plugin/tree/main/packages/plugin-china-search-console"
   },
-  "author": "zhengqbbb <zhengqbbb@gmail.com>",
   "license": "MIT",
+  "author": "zhengqbbb <zhengqbbb@gmail.com>",
+  "type": "module",
+  "exports": {
+    ".": "./lib/node/index.js",
+    "./client": "./lib/client/index.js",
+    "./package.json": "./package.json"
+  },
   "main": "lib/node/index.js",
   "types": "lib/node/index.d.ts",
   "files": [
@@ -30,13 +36,16 @@
     "copy": "cpx \"src/**/*.{css,vue}\" lib"
   },
   "dependencies": {
-    "@vuepress/client": "^2.0.0-beta.49",
-    "@vuepress/core": "^2.0.0-beta.49",
-    "@vuepress/utils": "^2.0.0-beta.49",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.15"
+    "@vuepress/client": "^2.0.0-beta.51",
+    "@vuepress/core": "^2.0.0-beta.51",
+    "@vuepress/shared": "^2.0.0-beta.51",
+    "vue": "^3.2.39",
+    "vue-router": "^4.1.5"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@vuepress/utils": "2.0.0-beta.51"
   }
 }
