--- a/packages/plugin-clipboard/package.json
+++ b/packages/plugin-clipboard/package.json
@@ -11,33 +11,41 @@
     "clipboard"
   ],
   "homepage": "https://vuepress.qbb.sh/clipboard",
+  "bugs": {
+    "url": "https://github.com/Zhengqbbb/vuepress-plugin"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Zhengqbbb/vuepress-plugin/tree/main/packages/plugin-clipboard"
   },
-  "bugs": {
-    "url": "https://github.com/Zhengqbbb/vuepress-plugin"
-  },
-  "author": "zhengqbbb <zhengqbbb@gmail.com>",
   "license": "MIT",
+  "author": "zhengqbbb <zhengqbbb@gmail.com>",
+  "type": "module",
+  "exports": {
+    ".": "./lib/node/index.js",
+    "./client": "./lib/client/*",
+    "./package.json": "./package.json"
+  },
   "main": "lib/node/index.js",
   "types": "lib/node/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "pnpm clean && tsc -b tsconfig.build.json",
     "clean": "rimraf lib *.tsbuildinfo",
     "copy": "cpx \"src/**/*.{css,vue}\" lib"
   },
-  "files": [
-    "lib"
-  ],
   "dependencies": {
-    "@vuepress/client": "^2.0.0-beta.49",
-    "@vuepress/core": "^2.0.0-beta.49",
-    "@vuepress/utils": "^2.0.0-beta.49",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.15"
+    "@vuepress/client": "^2.0.0-beta.51",
+    "@vuepress/core": "^2.0.0-beta.51",
+    "vue": "^3.2.39",
+    "vue-router": "^4.1.5"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@vuepress/utils": "2.0.0-beta.51"
   }
 }
