--- a/packages/plugin-china-search-console/package.json
+++ b/packages/plugin-china-search-console/package.json
@@ -36,16 +36,16 @@
     "copy": "cpx \"src/**/*.{css,vue}\" lib"
   },
   "dependencies": {
-    "@vuepress/client": "^2.0.0-beta.51",
-    "@vuepress/core": "^2.0.0-beta.51",
-    "@vuepress/shared": "^2.0.0-beta.51",
-    "vue": "^3.2.39",
-    "vue-router": "^4.1.5"
+    "@vuepress/client": "2.0.0-beta.60",
+    "@vuepress/core": "2.0.0-beta.60",
+    "@vuepress/shared": "2.0.0-beta.60",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@vuepress/utils": "2.0.0-beta.51"
+    "@vuepress/utils": "2.0.0-beta.60"
   }
 }
